@@ -59,7 +59,7 @@ class MalagaAnalyzer : public Analyzer {
 		void parseClass(Analysis * &analysis, malaga::value_t &result) const;
 		void parsePerusmuoto(Analysis * &analysis, malaga::value_t &result) const;
 		void parseNumber(Analysis * &analysis, malaga::value_t &result) const;
-		wchar_t * parseBaseform(wchar_t * &perusmuoto) const;
+		wchar_t * parseBaseform(wchar_t * &perusmuoto, const wchar_t * structure) const;
 		wchar_t * parseAttributeFromPerusmuoto(wchar_t * &perusmuoto, wchar_t id) const;
 		void initSymbols();
 		
